# agl-ivi-lab

./: .gitignore  AGENTS.md  README.md  pyproject.toml
artifacts/: README.md
artifacts/data/: .gitkeep
artifacts/models/: .gitkeep
configs/: README.md
docs/: architecture.md
docs/superpowers/plans/: 2026-07-06-agl-ivi-ai-lab-scaffold.md
docs/superpowers/specs/: 2026-07-06-agl-ivi-ai-lab-design.md
scripts/: README.md
src/agl_ivi_lab/: __init__.py
tests/: test_package.py
