[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agl-ivi-lab"
version = "0.1.0"
description = "AI and ML development lab for Automotive Grade Linux IVI"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "AGL IVI Lab Contributors" },
]
dependencies = []

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
